- Ensure initial "changed" status following a download or file load correctly reflects the hex data state (Graham)
Release build 4
- Make consistent the restriction on certain device buttons that do not support key moves on any buttons (Graham)
- Handle keymoves shared between a real and a virtual device button for remotes with AdvCodeBindFormat=NORMAL (Graham)
Release build 5
- Add/delete region segment, type DD, according to its presence/absence in the segment type list of RDF (Graham)
- Set default of 4, rather than 0, on duration for LKP/DKP (Graham)
- Display error message if first macro of LKP/DKP/ToadTog is longer than 7 keys (Graham)
- Update protocols.ini with MAXQ code for protocols in URC-6440 and OARUSB04G where missing (Graham)
Release build 6
- For internal special functions, shift serial left 3 places rather than 4 when device button keycodes clash with 4-place shift (Graham)
- For unknown buttons in button maps, assign Shifted or XShifted name rather than buttonxx when button is Shifted or XShifted form of valid base button (Graham)
- Omit buttons from lists of Upgrade, Macro and Learn buttons when their name is Shifted or XShifted form of valid base button (Graham) 

Changes for v2.02
-- Alpha --
- Fix bug that prevented fixed data being tested on download (Graham)
- Prevent ArrayIndexOutOfBoundsException when loading a .rmir file containing a device upgrade with missing protocol code (Graham)
- Fix bug that has prevented raw download from working since highlighting was added (Graham)
- Show upload/download message in status bar during uploads, normal and raw downloads, and initializations to 00 or FF (Graham)
-- Alpha 2
- Change format of timing displays in Learned Signal Advanced Details to allow pasting as a timing list into IRScope (Graham)
- In decoding a learned signal, if a burst index is out of range, treat as zero duration but put error message in Misc column (Graham)